# latex_classifier

./: .gitignore  Cargo.toml  cp_test.py  final classifier.json  label_mappings.json  python.py  weights.index
src/: construct.rs  core.rs  lib.rs  main.rs  models.rs  segment.rs  util.rs
tests/: tests.rs
