[package]
name = "latex_classifier"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cogent = "0.3.6"
image =  "0.22.3"    # Image manipulation
itertools = "0.8.2" # Nice zipping of iterators
arrayfire = "3.7.0" # Workaround for `anaylse` being broken

serde = {version = "1.0.106",features=["derive"]}   # Serialize (Export) and deserialize (Import) `NeuralNetwork`
serde_json = "1.0.50"                               # JSON format for serde