[package]
name = "latex_classifier"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image =  "0.23.14"      # Image manipulation
serde_json = "1.0.50"   # JSON format for serde
num = "0.4.0"           # `FromPrivites` for generic
num-format = "0.4.0" # Nice big nums