[package]
name = "latex_classifier"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "latex_classifier"
crate-type = ["dylib"]

[dependencies]
image =  "0.23.14"              # Image manipulation
num = "0.4.0"                   # `FromPrivites` for generic
num-format = "0.4.0"            # Nice big nums

simplers_optimization = "0.4.2" # Optimising binarization

# test prints
ndarray = "0.14.0"

# Static hashmap for checking symbols not used for calculating average row heights in cosntruction
phf = { version = "0.8.0", features = ["macros"] }